feat: CRUD for categories doc: update swagger test: test all the CRUD except the delete
